word wrapping fix

--- a/src/styles/tasks.css
+++ b/src/styles/tasks.css
@@ -33,6 +33,7 @@
     margin-left: 10px;
     color: #808080;
     word-wrap: break-word;
+    max-width: 110px;
   }
   
   
